kubernetes/deployments/activemq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: activemq
  template:
    metadata:
      labels:
        io.kompose.network/pepe-default: "true"
        io.kompose.service: activemq
    spec:
      containers:
        - image: alfresco/alfresco-activemq:5.17.1-jre11-rockylinux8
          name: activemq
          ports:
            - containerPort: 8161
            - containerPort: 5672
            - containerPort: 61616
            - containerPort: 61613
          resources:
            limits:
              memory: "1073741824"
      restartPolicy: Always
