kubernetes/deployments/content-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: content-app
  template:
    metadata:
      labels:
        io.kompose.network/pepe-default: "true"
        io.kompose.service: content-app
    spec:
      containers:
        - name: content-app
          image: alfresco/alfresco-content-app:4.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "134217728"
      restartPolicy: Always
