kubernetes/deployments/share-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: share
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: share
  template:
    metadata:
      labels:
        io.kompose.network/pepe-default: "true"
        io.kompose.service: share
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -XX:MinRAMPercentage=50 -XX:MaxRAMPercentage=80 -Dalfresco.host=localhost -Dalfresco.port=8080 -Dalfresco.context=alfresco -Dalfresco.protocol=http
            - name: REPO_HOST
              value: alfresco
            - name: REPO_PORT
              value: "8080"
          image: docker.io/alfresco/alfresco-share:7.4.0.1
          name: share
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "1073741824"
      restartPolicy: Always
