kubernetes/deployments/transform-core-aio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: transform-core-aio
  name: transform-core-aio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transform-core-aio
  template:
    metadata:
      labels:
        io.kompose.network/pepe-default: "true"
        io.kompose.service: transform-core-aio
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -XX:MinRAMPercentage=50 -XX:MaxRAMPercentage=80
          image: alfresco/alfresco-transform-core-aio:3.1.0
          name: transform-core-aio
          ports:
            - containerPort: 8090
          resources:
            limits:
              memory: "1610612736"
      restartPolicy: Always
