kubernetes/deployments/pepe-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: pepe-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/pepe-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pepe-default: "true"
